--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:Ats0209se0721@localhost:5432/ActivitiesAppDB
+sqlalchemy.url = postgresql://postgres:password@localhost:5432/app_db
 
 
 [post_write_hooks]
